# Caboco-Amigo

./: .env.example  .gitignore  pyproject.toml
src/ingestion/connectors/: obsidian_connector.py
src/utils/: config.py  models.py
